# safeloop

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SUPPORT.md  pyproject.toml  sitecustomize.py
.github/: PULL_REQUEST_TEMPLATE.md
docs/: approval-lifecycle.md  clawpatch-qwen-safeloop-integration.md  comparisons.md  compensation-adapter-contracts.md  compensation.md  completion-gap-audit.md  control-plane-threat-model.md  control-plane.md  faq.md  gbrain-integration-demo.md  html-readiness-artifacts.md  public-mvp-readiness.html  public-mvp-readiness.md  quarantine.md  real-world-agent-runs.md  recoverability-first.md  release-notes-0.0.3.md  release-notes-0.1.0.md  release-notes-0.1.1-0.1.4.md  release-notes-0.1.4.md  release-notes-0.2.0.md  release-notes-0.2.1-candidate.md  release.md  roadmap.md  rollback-demo.html  rollback.md  safeloop-0.0.3-agent-watchdog-rc.md  state-machine-and-journal-schema.md  threat-model.md  v0.2-external-usable-review.md  v0.2-readiness-matrix.md  v0.2.0-rc-definition-of-done.md  v0.2.1-readiness-note.md  v0.2.1-release-decision-packet.md
examples/: __init__.py  boundary_demos.py  browser_api_action_run.py  coding_agent_run.py  compensation_adapter_contracts.json  compensation_github_issue_demo.sh  compensation_message_demo.sh  fake_external_webhook_compensation_demo.py  full_demo.sh  gbrain_context_demo.sh  github_pr_demo.py  operator_packet_v2.md  recoverability_demo.html  recoverability_external_effect_demo.sh  research_intel_run.py  rollback_selective_demo.sh  watchdog_demo.sh
safeloop/: __init__.py
scripts/: public_readiness.py  render_readme_gif.py
tests/: test_action_rollback.py  test_action_span.py  test_agent_watchdog_rc.py  test_api.py  test_clawpatch_qwen_safeloop_integration_docs.py  test_cli_demo_doctor_init.py  test_compensation_adapters.py  test_compensation_examples_docs.py  test_compensation_plan_v1.py  test_compensation_planner.py  test_compensation_result.py  test_control_plane_anchor_audit.py  test_control_plane_approval_lifecycle.py  test_control_plane_policy_profiles_014.py  test_control_plane_rbac_signing_dashboard.py  test_control_plane_registry.py  test_control_plane_runtime_gate.py  test_control_plane_sqlite_lifecycle.py  test_dedupe.py  test_delta_audit.py  test_do_not_do_policy.py  test_docs_state_machine_spec.py  test_examples_boundary_demos.py  test_examples_github_demo.py  test_external_effects.py  test_external_outbox.py  test_external_usable_e2e.py  test_fake_external_webhook_compensation_demo.py  test_full_demo_golden_artifacts.py  test_gbrain_context_demo.py  test_handed_off_operator_boundary.py  test_hooks.py  test_html_artifacts.py  test_hunk_manifest.py  (+35 more)
(+86 files in other folders)
