[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "safeloop"
version = "0.1.4"
description = "Local watchdog and tamper-evident timeline for long-running AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nous Research" }]
dependencies = [
  "pydantic>=2,<3",
]

[project.optional-dependencies]
api = ["fastapi>=0.110"]
yaml = ["PyYAML>=6"]

[project.scripts]
safeloop = "safeloop.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
