[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "safeloop"
version = "0.2.0"
description = "Local watchdog and tamper-evident timeline for long-running AI agents"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "Nous Research" }]
license = "MIT"
license-files = ["LICENSE"]
keywords = ["ai-agents", "watchdog", "rollback", "audit", "cli"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Version Control :: Git",
  "Topic :: System :: Logging",
]
dependencies = [
  "pydantic>=2,<3",
]

[project.urls]
Homepage = "https://github.com/clawdia-saka/safeloop"
Repository = "https://github.com/clawdia-saka/safeloop"
Issues = "https://github.com/clawdia-saka/safeloop/issues"
Documentation = "https://github.com/clawdia-saka/safeloop#readme"

[project.optional-dependencies]
api = ["fastapi>=0.110"]
yaml = ["PyYAML>=6"]
dev = [
  "build>=1",
  "fastapi>=0.110",
  "httpx>=0.27",
  "PyYAML>=6",
  "pytest>=8",
  "twine>=5",
]

[project.scripts]
safeloop = "safeloop.cli:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
